# llvm-archive

clang-tests/: LICENSE.txt  README.txt
clang-tests/gcc-4_2-testsuite/: Makefile  README.txt  get-single-test-run-flags  replace-patterns
clang-tests/gdb-1472-testsuite/: Makefile  filter.py
clang-tests/nt/: Makefile  README.txt
core/: ModuleInfo.txt
dragonegg/: Makefile  README  TODO  bits_and_bobs.cpp  bits_and_bobs.h  get_arch_dir  gt-llvm-cache.h  llvm-abi.h  llvm-backend.cpp  llvm-cache.c  llvm-cache.h  llvm-convert.cpp  llvm-debug.cpp  llvm-debug.h  llvm-internal.h  llvm-plugin.cpp  llvm-target.cpp  llvm-target.h  llvm-types.cpp
dragonegg/gcc-patches/: extern-c.diff  gc_caches.diff  gengtype.diff  gimple_to_tree.diff  i386_static.diff  pass-names.diff
dragonegg/i386/: llvm-i386-target.h  llvm-i386.cpp  llvm-target.cpp  llvm-target.h
dragonegg/utils/: target.cpp
dragonegg/x86/: llvm-target.cpp  llvm-target.h
hlvm/: CREDITS.txt  ChangeLog  LICENSE.txt  Makefile  Makefile.common.in  Makefile.config.in  Makefile.hlvm  ModuleInfo.txt  README.txt  SConstruct  VERSION.in  build.sh  configure
hlvm/autoconf/: AutoRegen.sh  LICENSE.TXT  configure.ac
hlvm/autoconf/m4/: find_library.m4  find_package.m4
hlvm/docs/: Credits.html  Developers.html  DevelopersGuide.html  Doxyfile.in  FAQ.html  GettingStarted.html  HLVM.html  HLVM.rng  Makefile  OpenProjects.html  ReleaseNotes.html  ReleasePlans.html  RngToXHTML.xsl  SConscript  doxygen.css  doxygen.footer  doxygen.header  doxygen.intro  hlvm.css  index.html  index.shtml
hlvm/hlvm/: Makefile  SConscript
hlvm/lib/: Makefile
hlvm/scons/: check.py  configure.py  environment.py  filterbuilders.py  hlvm.py  main.py
hlvm/test/: Makefile  SConscript
hlvm/tools/: Makefile  SConscript
hlvm/utils/: countloc.py
hlvm/website/: APIs.php  FBThanks.php  Feedback.php  Privacy.shtml  Source.shtml  WebSVN.shtml  hlvm-announce.shtml  hlvm-commits.shtml  hlvm-dev.shtml  hlvm.css  index.shtml  robots.txt  security-image.php  tiki-index.php  wsvn.php
java/: Makefile  Makefile.common.in  Makefile.rules  TODO  class  configure
java/autoconf/: AutoRegen.sh  Makefile  configure.ac
java/docs/: TODO  java-frontend.txt  object-layout.txt
java/lib/: Makefile
java/runtime/: Makefile  jni.c  runtime.c  runtime.h  runtime.ll
java/test/: Makefile  Makefile.test
java/tools/: Makefile
llbrowse/: CMakeLists.txt  DesignNotes.txt  LICENSE.TXT  config.h.in
llbrowse/cmake_modules/: FindLLVM.cmake
llbrowse/doc/: LLBrowse.html
llbrowse/include/llbrowse/: BrowserApp.h  BrowserFrame.h  DetailsView.h  Formatting.h  Resources.h  TreeView.h
llbrowse/lib/: BrowserApp.cpp  BrowserFrame.cpp  DetailsView.cpp  Formatting.cpp  Resources.cpp  TreeView.cpp
llbrowse/scripts/: png2c
llvm-gcc-4.0/: ChangeLog.apple  ChangeLog.apple-ppc  GNUmakefile  ModuleInfo.txt  README.LLVM  build-for-llvm-top.sh  build_gcc  configure  configure.in  driverdriver.c  sdk  sdk-test
llvm-gcc-4.0/gcc/: ChangeLog  ChangeLog.apple  ChangeLog.apple-ppc  Makefile.in  builtin-types.def  builtins.c  builtins.def  c-common.c  c-common.def  c-common.h  c-cppbuiltin.c  c-decl.c  c-format.c  c-gimplify.c  c-incpath.c  c-lex.c  c-objc-common.c  c-opts.c  c-parse.in  c-pch.c  c-tree.h  c-typeck.c  c.opt  calls.c  combine.c  common.opt  config.gcc  config.host  config.in  configure  configure.ac  crtstuff.c  cse.c  dbxout.c  defaults.h  dwarf2.h  dwarf2asm.c  dwarf2asm.h  dwarf2out.c  emit-rtl.c  (+51 more)
llvm-gcc-4.0/libcpp/: ChangeLog.apple-ppc  charset.c  configure  configure.ac  directives.c  macro.c
llvm-gcc-4.0/libiberty/: strsignal.c
llvm-gcc-4.0/libstdc++-v3/: acinclude.m4  configure
llvm-gcc-4.2/: ChangeLog.apple  GNUmakefile  ModuleInfo.txt  README  README.LLVM  build-for-llvm-top.sh  build_gcc  config.guess  config.sub  configure  configure.in  driverdriver.c
llvm-gcc-4.2/extras/: build-4-mingw32  build-darwin-x-mingw32-x-armeabi  build-native-mingw32  build-self-4-mingw32  build-x-4-armeabi-hardfloat  build-x-4-armeabi-softfloat  build-x-4-gnueabi  build-x-4-linux  build-x-4-mingw32  buildbot-launcher  llvm-gcc-mingw32-cross-arm-linux-gnueabi-hard-float
llvm-gcc-4.2/fixincludes/: configure  configure.ac  fixincl.x  inclhack.def
llvm-gcc-4.2/gcc/: ChangeLog  ChangeLog.apple  Makefile.in  alias.c  bb-reorder.c  bt-load.c  builtins.c  builtins.def  c-common.c  c-common.h  c-convert.c  c-cppbuiltin.c  c-decl.c  c-format.c  c-format.h  c-gimplify.c  c-incpath.c  c-lang.c  c-lex.c  c-opts.c  c-parser.c  c-pch.c  c-ppoutput.c  c-pragma.c  c-tree.h  (+112 more)
llvm-top/: Makefile  README.txt  build  clean  configure  get  info  install  library.sh  options  update
nightly-test-server/: AcceptTestResults.php  EmailReport.php  NewTestingGuide.html  NightlyTest.pl  NightlyTestAccept.cgi  NightlyTestAccept.cgi.loc  NightlyTestAccept.php  NightlyTester.php  ProgramResults.php  README  SQLQuery.php  SQLUtil.php  common.php  drawfilesizegraph.php  drawmachinegraph.php  drawresultsgraph.php  fulltest.php  index.php  individualfilesizegraph.php  individualgraph.php  individualmachinegraph.php  locgraph.php  machine.php  machinegraph.php  multiplemachinegraph.php  multipleresultsgraph.php  phpinfo.php  popup.js  resultsgraph.php  sidebar.php  sorttable.js  style.css  test.php  testers.php  try.php
poolalloc/: Makefile.common.in  configure
safecode/: Makefile.common.in  configure
sample/: Makefile  Makefile.config.in  ModuleInfo.txt  build-for-llvm-top.sh  configure
sample/autoconf/: Makefile  configure.ac
support/: Makefile  Makefile.common  Makefile.common.in  Makefile.config.in  Makefile.rules  ModuleInfo.txt  build-for-llvm-top.sh  configure
support/autoconf/: AutoRegen.sh  Makefile  Makefile.mod  configure.ac
support/autoconf/m4/: config_makefile.m4  find_std_program.m4  module_support.m4  want_feature.m4  want_level.m4
television/: FEATURES.txt  LICENSE.TXT  Makefile  Makefile.common  Makefile.common.in  Makefile.config.in  PATTERNS.txt  README.txt  configure
television/autoconf/: AutoRegen.sh  configure.ac
vmkit/: Makefile.rules  README.TXT  configure
(+3140 files in other folders)
